# mqtt_websockets

./: .gitignore  Makefile  Makefile.am  README.md  build.sh  configure.ac
.devcontainer/: devenv.Dockerfile
.devcontainer/default/: devcontainer.json
src/: mqtt_ng.c  mqtt_ng_parser_test.c  mqtt_wss_client.c  test.c  ws_client.c
src/include/: common_internal.h  mqtt_constants.h  mqtt_ng.h  mqtt_ssl.h  mqtt_wss_client.h  ws_client.h
